edti login/register page

--- a/Spotify/public/login.html
+++ b/Spotify/public/login.html
@@ -39,6 +39,11 @@
                 <input type="date" id="birthday" name="birthday" required>
                 <label for="address">Address:</label>
                 <input type="text" id="address" name="address" required>
+                <label for="options">Register as:</label>
+                <select id="options" name="options">
+                    <option value="user">user</option>
+                    <option value="singer">singer</option>
+                </select>
                 <button type="submit">Register</button>
             </form>
         </div>
