--- a/Spotify/public/home.html
+++ b/Spotify/public/home.html
@@ -3,11 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spotify</title>
+    <link rel="stylesheet" href="/style/home.css">
 </head>
 
 <body>
-    <h1>Welcome !</h1>
+    <div class="container">
+        <div class="sidebar">
+            <ul id="menu"></ul>
+        </div>
+        <div class="content">
+            <h1>Welcome to Your Spotify Home Page</h1>
+        </div>
+    </div>
+    <script src="../js/home.js"></script>
 </body>
 
 </html>
