edit favorite song page

--- a/Spotify/public/songs.html
+++ b/Spotify/public/songs.html
@@ -7,9 +7,7 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="../style/home.css">
     <link rel="stylesheet" href="../style/songs.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -18,13 +16,12 @@
             <ul id="menu"></ul>
         </div>
         <div class="content">
-            <h2>Your Songs</h2>
-            <button class="showsongs">Show Songs</button>
+            <h1>songs</h1>
             <div id="songsList"></div>
         </div>
     </div>
-    <script src="../js/songs.js"></script>
     <script src="../js/home.js"></script>
+    <script src="../js/songs.js"></script>
 </body>
 
 </html>
