--- a/Spotify/public/mysongs.html
+++ b/Spotify/public/mysongs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="../style/home.css">
-    <link rel="stylesheet" href="../style/favsong.css">
+    <link rel="stylesheet" href="../style/mysongs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,12 +18,13 @@
             <ul id="menu"></ul>
         </div>
         <div class="content">
-            <h2>Your Favorite Songs</h2>
-            <ul id="songsList"></ul>
+            <h2>Your Songs</h2>
+            <button class="showsongs">Show Songs</button>
+            <div id="songsList"></div>
         </div>
     </div>
+    <script src="../js/mysongs.js"></script>
     <script src="../js/home.js"></script>
-    <script src="../js/favsong.js"></script>
 </body>
 
 </html>
