--- a/Spotify/public/songsnormaluser.html
+++ b/Spotify/public/songsnormaluser.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="../style/home.css">
-    <link rel="stylesheet" href="../style/mysongs.css">
+    <link rel="stylesheet" href="../style/songs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
