--- a/Spotify/public/songs.html
+++ b/Spotify/public/songs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="../style/home.css">
-    <link rel="stylesheet" href="../style/mysongs.css">
+    <link rel="stylesheet" href="../style/songs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
@@ -21,7 +21,7 @@
         </div>
     </div>
     <script src="../js/home.js"></script>
-    <script src="../js/songsnormaluser.js"></script>
+    <script src="../js/songs.js"></script>
 </body>
 
 </html>
