update Premium Users page

--- a/Spotify/public/buypremium.html
+++ b/Spotify/public/buypremium.html
@@ -21,9 +21,21 @@
                     <h1>Spotify Premium</h1>
                 </div>
                 <div class="card-body">
-                    <h2>Get Premium</h2>
-                    <p>Just $9.99</p>
-                    <button class="btn-primary">GET STARTED</button>
+                    <div class="card-Premium">
+                        <h2>Get Premium</h2>
+                        <p>Just $9.99 for 30 days</p>
+                        <button class="btn-primary">GET STARTED</button>
+                    </div>
+                    <div class="card-Premium">
+                        <h2>Get Premium</h2>
+                        <p>Just $19.99 for 60 days</p>
+                        <button class="btn-primary">GET STARTED</button>
+                    </div>
+                    <div class="card-Premium">
+                        <h2>Get Premium</h2>
+                        <p>Just $199.99 for 90 days</p>
+                        <button class="btn-primary">GET STARTED</button>
+                    </div>
                 </div>
             </div>
             <div class="wallet-message" id="walletMessage" style="display: none;"></div>
