--- a/Spotify/public/songs.html
+++ b/Spotify/public/songs.html
@@ -16,10 +16,23 @@
             <ul id="menu"></ul>
         </div>
         <div class="content">
-            <h1>songs</h1>
+            <h1>Songs</h1>
             <div id="songsList"></div>
         </div>
     </div>
+
+    <div id="playlistModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Select or Create Playlist</h2>
+            <div id="playlistsContainer"></div>
+            <div>
+                <input type="text" id="newPlaylistName" placeholder="New Playlist Name">
+                <button id="createPlaylistBtn">Create Playlist</button>
+            </div>
+        </div>
+    </div>
+
     <script src="../js/home.js"></script>
     <script src="../js/songs.js"></script>
 </body>
