my playlist page

--- a/Spotify/public/addalbum.html
+++ b/Spotify/public/addalbum.html
@@ -34,7 +34,7 @@
                 <h2>Add Songs to Album</h2>
                 <div id="songsContainer"></div>
 
-                <button type="button" id="addSongButton">Add Another Song</button>
+                <button type="button" id="addSongButton">Add Song</button>
                 <button type="submit">Create Album</button>
             </form>
         </div>
