--- a/Spotify/public/home.html
+++ b/Spotify/public/home.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="../style/home.css">
+    <link rel="stylesheet" href="../style/home2.css">
+    <link rel="stylesheet" href="../style/songs.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -14,10 +17,12 @@
             <ul id="menu"></ul>
         </div>
         <div class="content">
-            <h1>Welcome to Your Spotify Home Page</h1>
+            <h1>Welcome to Spotify Home Page</h1>
+            <div id="songsList" class="song-list"></div>
         </div>
     </div>
     <script src="../js/home.js"></script>
+    <script src="../js/home2.js"></script>
 </body>
 
 </html>
