--- a/Spotify/public/addalbum.html
+++ b/Spotify/public/addalbum.html
@@ -32,7 +32,8 @@
                 <input type="text" id="albumAge" name="age" required>
 
                 <h2>Add Songs to Album</h2>
-                <div id="songsContainer"></div>
+                <div id="songsContainer">
+                </div>
 
                 <button type="button" id="addSongButton">Add Song</button>
                 <button type="submit">Create Album</button>
