search for song and album

--- a/Spotify/public/songs.html
+++ b/Spotify/public/songs.html
@@ -17,6 +17,10 @@
         </div>
         <div class="content">
             <h1>Songs</h1>
+            <div>
+                <input type="text" id="searchInput" placeholder="Search for songs...">
+                <button id="searchBtn">Search</button>
+            </div>
             <div id="songsList"></div>
         </div>
     </div>
