--- a/Spotify/public/albums.html
+++ b/Spotify/public/albums.html
@@ -18,6 +18,10 @@
         </div>
         <div class="content">
             <h1>Albums</h1>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Search for albums...">
+                <button id="searchBtn">Search</button>
+            </div>
             <div id="albumsList"></div>
         </div>
     </div>
